--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -395,85 +395,60 @@ body {
 
   main {
     .carouselSection {
-      #carousel-container {
-        display: flex;
-        justify-content: flex-start;
-        margin-top: -27.5px;
-        width: 100%;
+      margin-top: -26.5px;
+      width: 100%;
+      position: relative;
+
+      #prev {
+        position: absolute;
+        left: 3% !important;
+        top: 50%;
+        background: black;
+        padding: 20px;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        background-color: white !important;
+        color: black;
+        opacity: 1 !important;
+
+        #l {
+          font-size: 20px;
+          color: black !important;
+        }
+      }
+
+      #next {
+        position: absolute;
+        right: 3% !important;
+        top: 50%;
+        background: black;
+        padding: 20px;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        background-color: white !important;
+        color: black;
+        opacity: 1;
+
+        #r {
+          font-size: 20px;
+          color: black !important;
+        }
+      }
+
+      .item {
         position: relative;
-        overflow: hidden;
+        cursor: pointer;
+        width: 100%;
 
-        #controls {
-          #prev {
-            left: 3%;
-          }
-
-          #next {
-            right: 5%;
-          }
-
-          span {
-            position: absolute;
-            top: 50%;
-
-            &:hover {
-              opacity: 1;
-            }
-
-            i {
-              background-color: rgb(229, 229, 229);
-              padding: 12px 15px;
-              border-radius: 50%;
-              font-size: 15px;
-              position: absolute;
-              cursor: pointer;
-            }
-          }
-        }
-
-        >div:first-child ul {
-          display: flex;
-          max-width: 100%;
-          margin: 0;
-        }
-
-        #carousel {
-          position: relative;
-          width: 4000px;
-          padding: 0;
-          margin: 0;
-
-          img {
-            width: 100%;
-            height: 462px;
-            cursor: pointer;
-          }
-
-          .animate {
-            -webkit-transition-duration: 1s;
-            -moz-transition-duration: 1s;
-            -o-transition-duration: 1s;
-            transition-duration: 1s;
-            -webkit-transition-property: -webkit-transform;
-            -moz-transition-property: -moz-transform;
-            -o-transition-property: -o-transform;
-            transition-property: transform;
-          }
-
-          .slide {
-            list-style: none;
-            position: relative;
-            float: left;
-          }
-
-          .content {
-            cursor: pointer;
-            position: absolute;
-            left: 10%;
-            z-index: 1;
-            top: 10%;
-            width: 30%;
-          }
+        .content {
+          cursor: pointer;
+          position: absolute;
+          left: 10%;
+          z-index: 1;
+          top: 10%;
+          width: 30%;
         }
       }
     }
@@ -555,7 +530,22 @@ body {
                   z-index: 5;
                   background: white;
                   border: 1px solid grey;
-                  box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+                  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+                  .discount {
+                    top: 4.2%;
+                    padding: 5px 15px;
+                  }
+
+                  .offer {
+                    top: 13%;
+                    padding: 5px 15px;
+                  }
+
+                  .type {
+                    top: 13%;
+                    padding: 5px 15px;
+                  }
 
                   .minimize {
                     right: 8.5%;
@@ -615,14 +605,60 @@ body {
                   box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
                 }
 
+                .discount {
+                  position: absolute;
+                  top: 5%;
+                  font-size: 11px;
+                  font-weight: 500;
+                  padding: 5px 15px;
+                  color: white;
+                  border-radius: 5px;
+                  background-color: #2BBEF9FF;
+                }
+
+                .offer {
+                  position: absolute;
+                  top: 15%;
+                  font-size: 10px;
+                  font-weight: 500;
+                  padding: 5px 15px;
+                  border-radius: 5px;
+                  color: white;
+                  background-color: #71778EFF;
+                }
+
+                .type {
+                  position: absolute;
+                  top: 15%;
+                  font-size: 10px;
+                  font-weight: 500;
+                  padding: 5px 15px;
+                  border-radius: 15px;
+                  color: #198E4DFF;
+                  background-color: #E5F8EDFF;
+                }
+
+
+
                 .minimize {
                   top: 5%;
                   right: 5%;
+
+                  &:hover {
+                    background-color: #233A95FF;
+                    color: white;
+                  }
                 }
+
 
                 .heart {
                   top: 15%;
                   right: 2%;
+
+                  &:hover {
+                    background-color: #233A95FF;
+                    color: white;
+                  }
                 }
 
                 p {
@@ -644,11 +680,15 @@ body {
                   width: 100%;
                 }
 
+                button {
+                  background: #233A95FF;
+                }
+
                 button,
                 .prodCount {
                   display: none;
                   padding: 5px 60px;
-                  margin: 10px 10px;
+                  margin: 20px 10px 3px;
                   border-radius: 10px;
                 }
 
@@ -656,6 +696,8 @@ body {
                   display: none;
                   position: relative;
                   text-align: center;
+                  top: 10px;
+                  padding-bottom: 28px;
 
                   :last-child {
                     right: 10%;
@@ -680,6 +722,8 @@ body {
                   }
 
                 }
+
+
               }
             }
           }
@@ -718,51 +762,214 @@ body {
 
       .product {
         border: 0.5px solid rgb(214, 214, 214);
-        width: 20%;
+        // min-height: 428px;
 
         .content {
-          padding: 20px;
+          padding: 15px 25px;
+          cursor: pointer;
+          position: relative;
+          transition-duration: 0.5s;
+          height: 426px;
 
-          a {
-            font-size: 15px;
-            width: 120%;
-            margin: 0 !important;
-            text-decoration: none;
-            color: black;
+          &:hover {
+            position: absolute;
+            padding: 15px 25px;
+            z-index: 5;
+            max-height: 426px;
+            background: white;
+            border: 1px solid grey;
+            box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+            .discount {
+              top: 4.2%;
+              padding: 5px 15px;
+            }
+
+            .offer {
+              top: 13%;
+              padding: 5px 15px;
+            }
+
+            .type {
+              top: 13%;
+              padding: 5px 15px;
+            }
+
+            .minimize {
+              right: 8.5%;
+              visibility: visible;
+              transition-duration: 0.4s;
+
+            }
+
+            .heart {
+              right: 8%;
+              visibility: visible;
+              transition-duration: 0.7s;
+
+            }
+
+            button {
+              display: block;
+            }
+
+            .prodCount {
+              display: none;
+              position: relative;
+              text-align: center;
+              top: 15px;
+
+              :last-child {
+                right: 10%;
+                position: absolute;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #FFCD00FF;
+                border: none;
+              }
+
+              :first-child {
+                position: absolute;
+                left: 10%;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #C8C8D7FF;
+                border: none;
+              }
+
+            }
+          }
+
+          i {
+            position: absolute;
+            visibility: hidden;
+            top: 12%;
+            background: white;
+            border-radius: 50%;
+            padding: 10px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+          }
+
+          .discount {
+            position: absolute;
+            top: 5%;
+            font-size: 11px;
+            font-weight: 500;
+            padding: 5px 15px;
+            color: white;
+            border-radius: 5px;
+            background-color: #2BBEF9FF;
+          }
+
+          .offer {
+            position: absolute;
+            top: 15%;
+            font-size: 10px;
+            font-weight: 500;
+            padding: 5px 15px;
+            border-radius: 5px;
+            color: white;
+            background-color: #71778EFF;
+          }
+
+          .type {
+            position: absolute;
+            top: 15%;
+            font-size: 10px;
+            font-weight: 500;
+            padding: 5px 15px;
+            border-radius: 15px;
+            color: #198E4DFF;
+            background-color: #E5F8EDFF;
+          }
+
+          .minimize {
+            top: 5%;
+            right: 5%;
+
+            &:hover {
+              background-color: #233A95FF;
+              color: white;
+            }
+          }
+
+
+          .heart {
+            top: 15%;
+            right: 2%;
+
+            &:hover {
+              background-color: #233A95FF;
+              color: white;
+            }
           }
 
           p {
+            width: 90%;
+            margin: 0 !important;
+
             img {
-              margin-left: -5px;
-              width: 60%;
+              width: 50% !important;
             }
           }
 
           strong {
-            padding: 8px 0;
-            display: block;
             font-size: 10px;
             font-weight: 700;
             color: #2FC573FF;
           }
 
           img {
-            width: 100%;
+            width: 30%;
           }
 
           button {
-            font-size: 12px;
-            font-weight: 600;
-            padding: 5px 30px;
-            margin: 7px 0;
-            width: 100%;
-            border-radius: 20px;
-            outline: none;
-            border: none;
-            background-color: #FFCD00FF;
+            background: #233A95FF;
+          }
+
+          button,
+          .prodCount {
+            display: none;
+            padding: 5px 50px;
+            margin: 20px 10px 3px;
+            border-radius: 10px;
+          }
+
+          .prodCount {
+            display: none;
+            position: relative;
+            text-align: center;
+
+            :last-child {
+              right: 10%;
+              position: absolute;
+              font-size: 20px;
+              border-radius: 50%;
+              border: 1px solid;
+              padding: 0px 6px;
+              background: #FFCD00FF;
+              border: none;
+            }
+
+            :first-child {
+              position: absolute;
+              left: 10%;
+              font-size: 20px;
+              border-radius: 50%;
+              border: 1px solid;
+              padding: 0px 6px;
+              background: #C8C8D7FF;
+              border: none;
+            }
+
           }
         }
       }
+
     }
 
     .extraPercent {
@@ -783,33 +990,169 @@ body {
 
     .extraProductSection {
       >div {
-        margin-left: 11%;
+        margin: 11%;
+        width: 80%;
 
         .product {
-          border: 0.5px solid rgb(214, 214, 214);
           width: 20%;
 
           .content {
-            padding: 20px;
+            padding: 15px 25px;
+            cursor: pointer;
+            position: relative;
+            transition-duration: 0.5s;
+            border: 1px solid;
+            margin: 0 -12px;
 
-            a {
-              font-size: 15px;
-              width: 120%;
-              margin: 0 !important;
-              text-decoration: none;
-              color: black;
+            &:hover {
+              position: absolute;
+              padding: 15px 25px;
+              width: 15.7%;
+              z-index: 5;
+              max-height: 426px;
+              background: white;
+              border: 1px solid grey;
+              box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+              .discount {
+                top: 4.2%;
+                padding: 5px 15px;
+              }
+
+              .offer {
+                top: 13%;
+                padding: 5px 15px;
+              }
+
+              .type {
+                top: 13%;
+                padding: 5px 15px;
+              }
+
+              .minimize {
+                right: 8.5%;
+                visibility: visible;
+                transition-duration: 0.4s;
+
+              }
+
+              .heart {
+                right: 8%;
+                visibility: visible;
+                transition-duration: 0.7s;
+
+              }
+
+              button {
+                display: block;
+              }
+
+              .prodCount {
+                display: none;
+                position: relative;
+                text-align: center;
+                padding-bottom: 12px;
+                left: 15px;
+
+                :last-child {
+                  right: 10%;
+                  position: absolute;
+                  font-size: 20px;
+                  border-radius: 50%;
+                  border: 1px solid;
+                  padding: 0px 6px;
+                  background: #FFCD00FF;
+                  border: none;
+                }
+
+                :first-child {
+                  position: absolute;
+                  left: 10%;
+                  font-size: 20px;
+                  border-radius: 50%;
+                  border: 1px solid;
+                  padding: 0px 6px;
+                  background: #C8C8D7FF;
+                  border: none;
+                }
+
+              }
+            }
+
+            i {
+              position: absolute;
+              visibility: hidden;
+              top: 12%;
+              background: white;
+              border-radius: 50%;
+              padding: 10px;
+              box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+            }
+
+            .discount {
+              position: absolute;
+              top: 5%;
+              font-size: 11px;
+              font-weight: 500;
+              padding: 5px 15px;
+              color: white;
+              border-radius: 5px;
+              background-color: #2BBEF9FF;
+            }
+
+            .offer {
+              position: absolute;
+              top: 15%;
+              font-size: 10px;
+              font-weight: 500;
+              padding: 5px 15px;
+              border-radius: 5px;
+              color: white;
+              background-color: #71778EFF;
+            }
+
+            .type {
+              position: absolute;
+              top: 15%;
+              font-size: 10px;
+              font-weight: 500;
+              padding: 5px 15px;
+              border-radius: 15px;
+              color: #198E4DFF;
+              background-color: #E5F8EDFF;
+            }
+
+            .minimize {
+              top: 5%;
+              right: 5%;
+
+              &:hover {
+                background-color: #233A95FF;
+                color: white;
+              }
+            }
+
+
+            .heart {
+              top: 15%;
+              right: 2%;
+
+              &:hover {
+                background-color: #233A95FF;
+                color: white;
+              }
             }
 
             p {
+              width: 90%;
+              margin: 0 !important;
+
               img {
-                margin-left: -5px;
-                width: 60%;
+                width: 70%;
               }
             }
 
             strong {
-              padding: 8px 0;
-              display: block;
               font-size: 10px;
               font-weight: 700;
               color: #2FC573FF;
@@ -817,6 +1160,50 @@ body {
 
             img {
               width: 100%;
+            }
+
+            button {
+              background: #233A95FF;
+            }
+
+            button,
+            .prodCount {
+              display: none;
+              padding: 5px 25px;
+              margin: 5px 10px 0px;
+              border-radius: 10px;
+            }
+
+            .prodCount {
+              display: none;
+              position: relative;
+              text-align: center;
+              top: 10px;
+              right: 10px;
+              bottom: 30px;
+
+              :last-child {
+                right: 10%;
+                position: absolute;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #FFCD00FF;
+                border: none;
+              }
+
+              :first-child {
+                position: absolute;
+                left: 10%;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #C8C8D7FF;
+                border: none;
+              }
+
             }
           }
         }
@@ -1276,7 +1663,7 @@ footer {
       }
 
       .prodCategories {
-        overflow-y: scroll;
+        overflow: auto;
         max-height: 260px;
 
         ul {
@@ -1746,6 +2133,10 @@ footer {
   }
 }
 
+
+
+
+
 // responsive
 
 @media (min-width: 768px) {
@@ -1779,8 +2170,8 @@ footer {
 // hazir goturduyum scss -e cevirmedim
 
 .cntnr {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 30px;
+  padding-left: 30px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1796,16 +2187,16 @@ footer {
 
   #featurecntnr .carousel-inner .carousel-item-end.active,
   #featurecntnr .carousel-inner .carousel-item-next {
-    transform: translateX(20%);
+    transform: translateX(25%);
   }
 
   #featurecntnr .carousel-inner .carousel-item-start.active,
   #featurecntnr .carousel-inner .carousel-item-prev {
-    transform: translateX(-20%);
+    transform: translateX(-25%);
   }
 
   #featurecntnr .card img {
-    width: 90%;
+    width: 100%;
   }
 
   #featurecntnr .carousel-item {
@@ -1854,8 +2245,6 @@ footer {
 }
 
 #featurecntnr .indicator:hover {
-  background-color: blue;
-  border: 1px solid blue;
   transition: 200ms;
 }
 
