feat I product page js completed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1963,12 +1963,27 @@ footer .contactBody .contact .contactNumb {
 .productBody .lastSection .product .content:hover {
   position: absolute;
   padding: 15px 25px;
-  width: 18%;
+  width: 18.7%;
   z-index: 5;
   background: white;
   border: 1px solid grey;
   -webkit-box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
           box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
+}
+
+.productBody .lastSection .product .content:hover .discount {
+  top: 4.2%;
+  padding: 5px 15px;
+}
+
+.productBody .lastSection .product .content:hover .offer {
+  top: 13%;
+  padding: 5px 15px;
+}
+
+.productBody .lastSection .product .content:hover .type {
+  top: 13%;
+  padding: 5px 15px;
 }
 
 .productBody .lastSection .product .content:hover .minimize {
@@ -1989,6 +2004,36 @@ footer .contactBody .contact .contactNumb {
   display: block;
 }
 
+.productBody .lastSection .product .content:hover .prodCount {
+  display: none;
+  position: relative;
+  text-align: center;
+  top: 15px;
+  padding-bottom: 24px;
+}
+
+.productBody .lastSection .product .content:hover .prodCount :last-child {
+  right: 10%;
+  position: absolute;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #FFCD00FF;
+  border: none;
+}
+
+.productBody .lastSection .product .content:hover .prodCount :first-child {
+  position: absolute;
+  left: 10%;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #C8C8D7FF;
+  border: none;
+}
+
 .productBody .lastSection .product .content .description {
   font-size: 12px;
 }
@@ -2004,14 +2049,57 @@ footer .contactBody .contact .contactNumb {
           box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
 }
 
+.productBody .lastSection .product .content .discount {
+  position: absolute;
+  top: 5%;
+  font-size: 11px;
+  font-weight: 500;
+  padding: 5px 15px;
+  color: white;
+  border-radius: 5px;
+  background-color: #2BBEF9FF;
+}
+
+.productBody .lastSection .product .content .offer {
+  position: absolute;
+  top: 15%;
+  font-size: 10px;
+  font-weight: 500;
+  padding: 5px 15px;
+  border-radius: 5px;
+  color: white;
+  background-color: #71778EFF;
+}
+
+.productBody .lastSection .product .content .type {
+  position: absolute;
+  top: 15%;
+  font-size: 10px;
+  font-weight: 500;
+  padding: 5px 15px;
+  border-radius: 15px;
+  color: #198E4DFF;
+  background-color: #E5F8EDFF;
+}
+
 .productBody .lastSection .product .content .minimize {
   top: 5%;
   right: 5%;
 }
 
+.productBody .lastSection .product .content .minimize:hover {
+  background-color: #233A95FF;
+  color: white;
+}
+
 .productBody .lastSection .product .content .heart {
-  top: 20%;
+  top: 15%;
   right: 2%;
+}
+
+.productBody .lastSection .product .content .heart:hover {
+  background-color: #233A95FF;
+  color: white;
 }
 
 .productBody .lastSection .product .content p {
@@ -2039,6 +2127,42 @@ footer .contactBody .contact .contactNumb {
   font-size: 12px;
   margin: 15px 0px;
   border-radius: 20px;
+}
+
+.productBody .lastSection .product .content button,
+.productBody .lastSection .product .content .prodCount {
+  display: none;
+  padding: 5px 70px;
+  margin: 20px 10px 3px;
+  border-radius: 10px;
+}
+
+.productBody .lastSection .product .content .prodCount {
+  display: none;
+  position: relative;
+  text-align: center;
+}
+
+.productBody .lastSection .product .content .prodCount :last-child {
+  right: 10%;
+  position: absolute;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #FFCD00FF;
+  border: none;
+}
+
+.productBody .lastSection .product .content .prodCount :first-child {
+  position: absolute;
+  left: 10%;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #C8C8D7FF;
+  border: none;
 }
 
 @media (min-width: 768px) {
